Update to latest upstream release

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  "Sample-1.2.3.tgz": d2eade7b3c456de56604232cb31f55de81d3225b
+  Sample-1.2.8.tgz: 86c96cc43196923b1d23449e4d3815365d1c4ea1
